Working on Create Product

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,11 +7,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": {
+  "ConnectionStrings": {
     "adam": "Server=CXJSN13\\SQLEXPRESS;Database=Northwind;user id=da;password=P@$$word!@#;",
     "rick": "Server=52Y6Q13\\SQLEXPRESS; Database=Northwind; user id=user4; password=pass1;",
-    "brendan": "Server=GWJSN13\\SQLEXPRESS; Database=Northwind; user id =admin; password=pass1;"
-
-
+    "brendan": "Server=GWJSN13\\SQLEXPRESS; Database=Northwind; user id=admin; password=pass1;"
   }
 }
